fix misaligned button

--- a/Szalloda/public/css/profil.css
+++ b/Szalloda/public/css/profil.css
@@ -300,3 +300,7 @@ ul {
 .review-button {
     margin: 0 !important;
 }
+
+.delete-button {
+    margin: 0 !important;
+}
